# WEB_HW_10

./: README.md  pyproject.toml
quotepages/: manage.py
quotepages/quoteapp/: models.py  urls.py
quotepages/quoteapp/migrations/: 0001_initial.py  0002_alter_quote_author.py  0003_author_user_quote_user_tag_user_tag_tag of username.py
quotepages/quoteapp/templates/quoteapp/: author.html  index.html
quotepages/quotepages/: asgi.py  settings.py  urls.py  wsgi.py
quotepages/users/: views.py
quotepages/users/migrations/: 0001_initial.py
quotepages/users/templates/users/: profile.html
