[tool.poetry]
name = "web-hw-10"
version = "0.1.0"
description = ""
authors = ["Viacheslav Artemenko <v.a.artemenko1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
